// Vitest Snapshot v1

exports[`CommentTree > renders a comment tree with comments 1`] = `
"<div data-v-5d0380ab=\\"\\">
  <form class=\\"\\" data-v-5d0380ab=\\"\\">
    <!--v-if-->
    <article class=\\"flex flex-wrap items-start gap-2\\" data-v-5d0380ab=\\"\\">
      <figure class=\\"\\" data-v-5d0380ab=\\"\\">
        <identity-picker-wrapper-stub modelvalue=\\"[object Object]\\" inline=\\"false\\" masked=\\"false\\" data-v-5d0380ab=\\"\\"></identity-picker-wrapper-stub>
      </figure>
      <div class=\\"flex-1\\" data-v-5d0380ab=\\"\\">
        <div class=\\"flex flex-col gap-2\\" data-v-5d0380ab=\\"\\">
          <div class=\\"editor-wrapper\\" data-v-5d0380ab=\\"\\">
            <editor-stub currentactor=\\"[object Object]\\" mode=\\"comment\\" modelvalue=\\"\\" aria-label=\\"Comment body\\" data-v-5d0380ab=\\"\\"></editor-stub>
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div class=\\"\\" data-v-5d0380ab=\\"\\">
        <o-button-stub variant=\\"primary\\" iconleft=\\"send\\" rounded=\\"false\\" outlined=\\"false\\" expanded=\\"false\\" inverted=\\"false\\" nativetype=\\"submit\\" tag=\\"button\\" disabled=\\"false\\" iconboth=\\"false\\" data-v-5d0380ab=\\"\\"></o-button-stub>
      </div>
    </article>
  </form>
  <transition-group-stub data-v-5d0380ab=\\"\\">
    <transition-group-stub data-v-5d0380ab=\\"\\">
      <comment-stub comment=\\"[object Object]\\" event=\\"[object Object]\\" currentactor=\\"[object Object]\\" rootcomment=\\"true\\" class=\\"root-comment\\" data-v-5d0380ab=\\"\\"></comment-stub>
      <comment-stub comment=\\"[object Object]\\" event=\\"[object Object]\\" currentactor=\\"[object Object]\\" rootcomment=\\"true\\" class=\\"root-comment\\" data-v-5d0380ab=\\"\\"></comment-stub>
    </transition-group-stub>
  </transition-group-stub>
</div>"
`;

exports[`CommentTree > renders a loading comment tree 1`] = `
"<div data-v-5d0380ab=\\"\\">
  <!--v-if-->
  <p class=\\"text-center\\" data-v-5d0380ab=\\"\\">Loading comments…</p>
</div>"
`;

exports[`CommentTree > renders an empty comment tree 1`] = `
"<div data-v-5d0380ab=\\"\\">
  <form class=\\"\\" data-v-5d0380ab=\\"\\">
    <!--v-if-->
    <article class=\\"flex flex-wrap items-start gap-2\\" data-v-5d0380ab=\\"\\">
      <figure class=\\"\\" data-v-5d0380ab=\\"\\">
        <identity-picker-wrapper-stub modelvalue=\\"[object Object]\\" inline=\\"false\\" masked=\\"false\\" data-v-5d0380ab=\\"\\"></identity-picker-wrapper-stub>
      </figure>
      <div class=\\"flex-1\\" data-v-5d0380ab=\\"\\">
        <div class=\\"flex flex-col gap-2\\" data-v-5d0380ab=\\"\\">
          <div class=\\"editor-wrapper\\" data-v-5d0380ab=\\"\\">
            <editor-stub currentactor=\\"[object Object]\\" mode=\\"comment\\" modelvalue=\\"\\" aria-label=\\"Comment body\\" data-v-5d0380ab=\\"\\"></editor-stub>
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div class=\\"\\" data-v-5d0380ab=\\"\\">
        <o-button-stub variant=\\"primary\\" iconleft=\\"send\\" rounded=\\"false\\" outlined=\\"false\\" expanded=\\"false\\" inverted=\\"false\\" nativetype=\\"submit\\" tag=\\"button\\" disabled=\\"false\\" iconboth=\\"false\\" data-v-5d0380ab=\\"\\"></o-button-stub>
      </div>
    </article>
  </form>
  <transition-group-stub data-v-5d0380ab=\\"\\">
    <empty-content-stub icon=\\"comment\\" descriptionclasses=\\"\\" inline=\\"true\\" center=\\"false\\" data-v-5d0380ab=\\"\\"></empty-content-stub>
  </transition-group-stub>
</div>"
`;
